<resources>
    <string name="app_name" translatable="false">Smart WheelChair</string>
    <!--  Activity page -->
    <string name="title_activity_nav">Attività</string>
    <string name="title_activity">La tua attività</string>
    <string name="placeholder_not_started" translatable="false">00:00</string>
    <string name="unita_newton" translatable="false">N</string>
    <string name="placeholder_zero" translatable="false">0</string>
    <string name="nome_forza">Forza</string>
    <string name="nome_calorie">Calorie consumate</string>
    <string name="nome_distanza">Distanza</string>
    <string name="nome_accelerazione">Accelerazione</string>
    <string name="nome_velocita">Velocità</string>
    <string name="unita_kcal">kCal</string>
    <string name="unita_metri" translatable="false">m</string>
    <string name="unita_accelerazione" translatable="false">m/s</string>
    <string name="due_esponente" translatable="false">2</string>
    <string name="unita_velocita" translatable="false">m/s</string>
    <string name="inizia_allenemento">Inizia allenemento</string>
    <string name="termina_allenamento">Termina allenamento</string>
    <!--  TipView -->
    <string name="suggerimento">Suggerimento</string>
    <string-array name="suggerimenti">
        <item>Assicurati di impostare correttamente il tuo peso nell\'app per ottenere una stima accurata delle calorie bruciate.</item>
        <item>Mantieni una postura corretta sulla sedia a rotelle per massimizzare il numero di calorie bruciate durante l\'attività fisica.</item>
        <item>Se possibile, programma le tue attività fisiche in luoghi sicuri e ben illuminati per garantire la tua sicurezza.</item>
        <item>Ricorda di bere molta acqua durante l\'esercizio fisico per evitare la disidratazione.</item>
        <item>Prova ad aumentare gradualmente la durata e l\'intensità delle tue attività fisiche per evitare lesioni o fatiche eccessive.</item>
        <item>Usa l\'app per monitorare la tua attività fisica nel tempo e impostare obiettivi realistici per te stesso.</item>
        <item>Se hai bisogno di aiuto o supporto, non esitare a contattare un professionista sanitario o un allenatore qualificato.</item>
        <item>Ricorda di fare sempre un riscaldamento adeguato prima di iniziare l\'esercizio fisico per evitare lesioni.</item>
        <item>Se noti sintomi di affaticamento eccessivo o dolore, interrompi l\'esercizio fisico e contatta un professionista sanitario.</item>
    </string-array>

    <!--  Settings page -->
    <string name="title_settings">Impostazioni</string>
    <string name="setting_generali">Generali</string>
    <string name="setting_peso">Imposta il tuo peso (kg)</string>
    <string name="setting_hint_peso">Peso in kg</string>
    <string name="setting_tema">Imposta il tuo tema preferito</string>
    <string name="setting_unit_di_misura">Unità di misura</string>
    <string name="setting_distanza">Imposta l\'unita di misura che preferisci per la distanza</string>
    <string name="setting_velocita">Imposta l\'unita di misura che preferisci per la velocità</string>
    <string name="setting_calorie">Imposta l\'unita di misura che preferisci per le calorie</string>
    <!--  Home page  -->
    <string name="title_home">Home</string>
    <string name="obiettivo_giornaliero">Obiettivo giornaliero\n\n150kCal</string>
    <string name="title_raccomandazione">Raccomandazione</string>
    <string name="title_informazioni">Informazioni</string>
    <string name="info_spam">Premi per scoprire altro sul progetto e su questa applicazione</string>
    <string name="vai_alle_attivit">Vai alle attività</string>
    <string name="info_continue"><u>Continua a leggere</u></string>

    <string name="next">Avanti</string>
    <string name="welcome_text">Il nostro obiettivo è aiutarti a monitorare la tua attività fisica</string>
    <string name="benvenuto">Benvenuto</string>
    <string name="perms_text">Abbiamo bisogno di alcuni permessi prima di iniziare</string>
    <string name="title_perms">Innanzitutto</string>
    <string name="concedi">Concedi</string>
    <string name="title_peso">Abbiamo quasi finito</string>
    <string name="peso_text">Ci serve solo il tuo peso per i nostri calcoli</string>
    <string name="unita_calorie" translatable="false">cal</string>
    <string name="tema_normale">Normale</string>
    <string name="unita_kmorari" translatable="false">km/h</string>
    <string name="unita_km" translatable="false">km</string>
    <string name="setting_mac">Cambia MAC Bluetooth</string>
    <string name="connessione_in_corso">Connessione in corso…</string>
    <string name="connessione_effettuata">Connessione effettuata!</string>
    <string name="bluetooth_necessario">Bluetooth è necessario per il funzionamento!</string>
    <string name="bluetooth_abilitato">Bluetooth abilitato!</string>
    <string name="permessi_necessari">Permessi necessari!</string>

    <!-- Info page -->
    <string name="spam_renato" translatable="false"><a href="https://reloia.github.io/">Renato Loiacono</a></string>
    <string name="spam_gabriele" translatable="false"><a href="https://github.com/gabdevele/">P. Gabriele Schiraldi</a></string>
    <string name="placeholder_no_value">0.00</string>
    <string name="spam_app"><a href="https://github.com/gabdevele/SmartWheelchair">Codice pubblico dell\'applicazione</a></string>
    <string name="spam_scuola" ><a href="https://www.iissvoltadegemmis.edu.it/">Sito web dell\'Istituto</a></string>
    <string name="spam_ricerca" ><a href="https://www.frontiersin.org/articles/10.3389/fneur.2018.00478/full">Link alla ricerca</a></string>
    <string name="text_progetto">Il nostro progetto mira a migliorare la qualità della vita delle persone con disabilità, dando la possibilità di controllare la propria attività fisica.</string>
    <string name="sub_progetto">Il progetto</string>
    <string name="sub_chi_siamo">Chi siamo</string>
    <string name="text_chi_siamo">Siamo un team di ragazzi delle superiori composti da studenti di meccatronica e informatica dell\'IISS Volta - De Gemmis di Bitonto.</string>
    <string name="sub_links">Link esterni</string>
    <string name="text_autori">Autori dell\'applicazione</string>
    <string name="sub_collegamenti">Collegamento alle ricerche</string>
    <string name="text_collegamenti">Per saperne di più sulle ricerche dietro il nostro progetto, visita il seguente link:</string>
    <string name="text_raccomandazione">Si raccomanda di percorrere dai 3 ai 5 kilometri al giorno per 5 giorni ogni settimana</string>
    <string name="divider_mac">:</string>
</resources>