<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.welcome.WelcomeScreen"
    android:background="@color/blue2"
    android:padding="20dp"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_perms"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:layout_marginTop="-20dp"
        android:textSize="30sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="900dp"
        android:text="@string/perms_text"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:textSize="40sp"
        android:lineSpacingExtra="-5sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom|center"
        >

        <Button
            android:id="@+id/concedi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/concedi"
            android:textColor="@color/blue2"
            android:background="@drawable/button_background_2"
            />

    </LinearLayout>

</LinearLayout>